<resources>
    <string name="app_name">TestLibrarySong</string>
    <string name="users_list">Users list</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_description">Email / Description</string>
    <string name="song_name">Song name</string>
    <string name="songs_by">Songs by\u0020</string>
    <string name="playlist_by">Playlists by\u0020</string>
    <string name="details">Details</string>
    <string name="users_by_library">Users by library</string>
    <string name="libraries_by_song">Libraries by Song</string>
    <string name="label">Label</string>
    <string name="select_users">Select users</string>
    <string name="select_songs">Select songs</string>
    <string name="similar_playlists">Similar Playlists</string>
    <string name="similar_songs">Similar Songs</string>
    <string name="similar_users">Similar Users</string>
    <string name="male_type">Male Type</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string-array name="fragments">
        <item>Tasks 1..5</item>
        <item>Task 6</item>
        <item>Task 7</item>
    </string-array>

</resources>