<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/song_name"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tvFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/first_name"
            app:layout_constraintBottom_toTopOf="@id/tvEMailOrDescription"
            app:layout_constraintEnd_toStartOf="@id/tvLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSongName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/last_name"
            app:layout_constraintBottom_toBottomOf="@id/tvFirstName"
            app:layout_constraintStart_toEndOf="@id/tvFirstName"
            app:layout_constraintTop_toTopOf="@id/tvFirstName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEMailOrDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/email_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFirstName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>