<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectUsers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/select_users"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSpinnerFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSpinnerFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toStartOf="@id/cardViewSpinnerSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectUsers"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerFirst"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSpinnerSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/cardViewSpinnerFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardViewSpinnerFirst"
        app:layout_constraintTop_toTopOf="@+id/cardViewSpinnerFirst"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerSecond"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSelectUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnShowSimilarPlaylists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSpinnerFirst" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShowSimilarPlaylists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/similar_playlists"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnShowSimilarSongs"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShowSimilarSongs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/similar_songs"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnShowSimilarPlaylists"
         />

</androidx.constraintlayout.widget.ConstraintLayout>